syntax = "proto3";

option csharp_namespace = "Gemma.Discount.GRPC.Protos";


service DiscountProtoService {
	rpc GetAllCoupons (GetAllCouponRequest) returns (Coupons);
	rpc GetDiscountById (GetDiscountByIdRequest) returns (CouponModel);
	rpc GetDiscountByProductName (GetDiscountByProductNameRequest) returns (CouponModel);
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetAllCouponRequest {}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message Coupons {
	repeated CouponModel coupons = 1;
}

message GetDiscountByIdRequest {
	int32 productId = 1;
}

message GetDiscountByProductNameRequest {
	string productName = 1; 
}

message CreateDiscountRequest {
	CouponModel coupon = 1; 
}

message UpdateDiscountRequest {
	CouponModel coupon = 1; 
}

message DeleteDiscountRequest {
	int32 id = 1; 
}

message DeleteDiscountResponse {	
	bool success = 1;
}